--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@ p {
   background-color: yellow;
   border-radius: 2px;
 }
+
+.editor-toolbar button.active {
+  background-color: #ccc;
+  color: #fff;
+  border: 1px solid #ccc;
+}
