--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,14 @@ p {
   color: #fff;
   border: 1px solid #ccc;
 }
+
+.good-editor-container {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+}
